[tool.poetry]
name = "chsi-converter"
version = "0.1.0"
description = "学信网英文档案一键转换"
authors = ["Nagi-ovo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.12"
flask = "2.2.2"
click = "8.1.6"
colorama = "0.4.6"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
pypdf = "3.17.1"
python-docx = "0.8.11"
werkzeug = "2.2.2"
pdf2image = "1.16.0"
pypinyin = "0.42.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
