[project]
name = "chsi-converter"
version = "0.1.0"
description = "学信网英文档案一键转换"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click==8.1.6",
    "colorama==0.4.6",
    "Flask==2.2.2",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "lxml== 4.9.3",
    "MarkupSafe==2.1.3",
    "pdf2image==1.16.0",
    "pypdf==3.17.1",
    "pypinyin==0.42.0",
    "python-docx==0.8.11",
    "Werkzeug==2.2.2",
    "python-dotenv",
    "gunicorn==22.0.0",
    "ruff",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true